--- a/style.css
+++ b/style.css
@@ -1,1 +1,1 @@
-body{margin:0;padding:0}.street{fill:none;stroke:black}.trip{fill:none;stroke:red;stroke-width:10px}
+body{background:#1D1F29;margin:0;padding:0}.street{fill:none;stroke:#D2DDBB}.trip{fill:none;stroke:rgba(77,134,142,0.1);stroke-width:20px}.car{fill:#E63C2F;stroke:none}
