--- a/style.css
+++ b/style.css
@@ -1,1 +1,1 @@
-body{background:#1D1F29;margin:0;padding:0}.street{fill:none;stroke:#D2DDBB}.trips{display:none}.trip{fill:none;stroke:rgba(230,60,47,0.1);stroke-width:20px}.car{fill:#4D868E;stroke:none}.debug{fill:none;stroke:red;stroke-width:20px}
+body{background:#1D1F29;margin:0;padding:0;color:#D2DDBB}.street{fill:none;stroke:#D2DDBB}.trip{fill:none;stroke:rgba(230,60,47,0.1);stroke-width:20px}.car{fill:#4D868E;stroke:none}.active{fill:#E63C2F;stroke:none}.debug{fill:none;stroke:red;stroke-width:20px}
