--- a/src/scss/components/_map.scss
+++ b/src/scss/components/_map.scss
@@ -1,27 +1,30 @@
-.street{
+#streets{
+	.street{
+		stroke: $lime;
+	} 
+}
+#trips{
+	.trip{
+		stroke: rgba($red, 0.1);
+		stroke-width: 1rem;
+	}
+}
+#highlight{
+	.highlight{
+		stroke: $red;
+	}
+}
+#cars{
+	.car{
+		fill: $blue;
+		stroke: rgba($blue, 0);
+		stroke-width: 5rem;
+	}
+}
+
+.street, .trip, .highlight{
 	fill: none;
-	stroke: $lime;
-}  
-
-.trips{
-}
-
-.trip{
-	fill: none;
-	stroke: rgba($red, 0.1);
-	stroke-width: 20px;
-}
-
-.car{
-	// To test overlapping trips
-	// fill: rgba($blue, 0.5);
-	fill: $blue;
-	stroke: none;
-}
-
-.active{
-	fill: $red;
-	stroke: none;
+	stroke-linecap: round;
 }
 
 .debug{
