--- a/src/scss/components/_map.scss
+++ b/src/scss/components/_map.scss
@@ -11,7 +11,7 @@
 }
 #highlight{
 	.highlight{
-		stroke: $red;
+		stroke: $lime;
 	}
 }
 #cars{
@@ -32,3 +32,7 @@
 	stroke: red;
 	stroke-width: 20px;
 }
+
+// #ngMap{
+// 	width: 10000px;
+// }
